--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bulma": "^0.9.3",
     "core-js": "^3.8.3",
     "json-server": "^0.17.0",
+    "moment": "^2.29.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.14"
   },
