--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.0.0",
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
+    "@tinymce/tinymce-vue": "^4.0.7",
     "axios": "^0.26.1",
     "bootstrap-icons": "^1.8.1",
     "bootstrap-icons-vue": "^1.8.1",
