--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "json-server": "^0.17.0",
     "moment": "^2.29.3",
     "vue": "^3.2.13",
+    "vue-analytics": "^5.22.1",
     "vue-router": "^4.0.14",
     "vue3-cookies": "^1.0.6"
   },
